--- a/software/src/omaha/templates/components/information-viewer.html
+++ b/software/src/omaha/templates/components/information-viewer.html
@@ -15,6 +15,10 @@
 <link rel="import" href="/components/speaker-icon.html">
 <link rel="import" href="/components/zones/zone-assigner.html">
 
+
+<< THIS FILE IS DEPRECATED BUT MAY BE USED IN THE FUTURE >>
+
+
 <dom-module id="information-viewer" class="layout horizontal">
   <template>
     <style>
