--- a/software/src/omaha/templates/components/login-form.html
+++ b/software/src/omaha/templates/components/login-form.html
@@ -73,7 +73,7 @@
       is: 'login-form',
 
       _submit: function() {
-        var loginInfo = {     // dont think this needs to be here
+        var loginInfo = {
 
         }
         this.$.loginAjax.body = {
