--- a/software/src/omaha/templates/components/target-selector.html
+++ b/software/src/omaha/templates/components/target-selector.html
@@ -12,8 +12,6 @@
 <script src="Chart.js" type="text/jscript"></script>
 <script src="jquery-ui-1.11.4.js" type="text/jscript"></script>
 <script src="jquery.ui.touch-punch.js" type="text/jscript"></script>
-<!--<script src="jquery-2.2.0.js"></script>-->
-<!--<link rel="import" href="/bower_components/paper-checkbox//paper-checkbox.html">-->
 
 <dom-module id="target-selector">
   <template>
@@ -74,16 +72,8 @@
       </div>
       <div class="card-actions">
         <paper-button on-click="_setTargetClicked">apply target</paper-button>
-        <!-- try to get this to open up -->
         <paper-dropdown-menu vertical-align="bottom" horizontal-align="left" id="targetMenu" no-label-float label="Target Selection:">
           <paper-listbox id="targetListbox" attr-for-selected="value" selected="{{selection}}" class="dropdown-content" value="0">
-            <!--<template if="{{this.speaker.Response}}">
-              <paper-dropdown-menu selected="{{selected}}">
-                <template repeat="{{label in this.speaker.PresetNames}}">
-                  <paper-item value="{{i}}" label="{{label}}"></paper-item>
-                </template>
-              </paper-dropdown-menu>  
-            </template>-->   
             <paper-item id="Currently Applied" value="Currently Applied">Currently Applied</paper-item>
             <paper-item id="Add New Target" value="Add New Target">Add New Target</paper-item>   
           </paper-listbox>
@@ -91,7 +81,6 @@
       </div>
     </paper-card>
     <paper-toast id="toaster" duration="4000"></span></paper-toast>
-    <!--<paper-toast id="errorAdjustToast"><paper-item id="Add New Target" value="Add New Preset">Add New Preset</paper-item></paper-toast>-->
     <paper-toast id="errorAdjustToast"></paper-toast>
     <paper-dialog id="dialog" heading="this is a title" entry-animation="scale-up-animation" exit-animation="fade-out-animation" modal="true">
       <h1 style="text-align: center;">Add Target</h1>
@@ -167,15 +156,13 @@
       scaleFontSize: 12,
     };
 
-    //redraw(dataArray, lineAttributes);
-
     Polymer({
       is: 'target-selector',
       
       properties: {
         internalTarget: String,
 
-        target: {     // I think this 
+        target: {
           type: String,
           notify: true,
           observer: '_setInternalTarget'
@@ -184,70 +171,17 @@
         speaker: {
           type: Object,
         },
-
-       /*
-        internaMusiclVolume: String,
-
-         musicVolume: {
-          type: String,
-          notify: true,
-          observer: '_setInternalMusicVolume'
-        },
-        */
-
-        /*internalVolume3: Number,
-
-        pagingVolume: {
-          type: Number,
-          notify: true,
-          observer: '_setInternalMusicVolume'
-        },*/
-
         speakerId: {
           type: Number
         }
       },
 
-    redrawOnInput: redrawOnInput,
-
-      /*
-      properties: {
-        internalVolume2: Number,
-
-         musicVolume: {
-          type: Number,
-          notify: true,
-          observer: '_setInternalMusicVolume'
-        },
-
-        speakerId: {
-          type: Number
-        }
-      },
-      */
+      redrawOnInput: redrawOnInput,
 
       _setInternalTarget: function(dataArrayString) {
         this.internalTarget = dataArrayString;
         console.log("_setInternalTarget" + dataArrayString);
       },
-
-      /*
-      _setInternalMusicVolume: function(musicVolume) {
-        this.internalMusicVolume = musicVolume;
-        console.log("_setInternalMusicVolume");
-      },
-      */
-
-      // dont know if we even need these observers
-      /* _setInternalMusicVolume: function(musicVolume) {
-        this.internalVolume2 = this.musicVolume;
-        console.log("_setInternalMusicVolume");
-      },
-
-       _setInternalPagingVolume: function(pagingVolume) {
-        this.internalVolume3 = this.musicVolume;
-        console.log("_setInternalPagingVolume");
-      },*/
       
       _setTargetClicked: function() {
         console.log("i got pressed _setTargetClicked");
@@ -285,14 +219,11 @@
           console.log("current target length", this.speaker.CurrentTarget.length);
           for (var i = 0; i < this.speaker.CurrentTarget.length; i++) { 
             this.speaker.CurrentTarget[i] = dataArray[i];
-            //console.log(dataArray[i]);
           }
           console.log("can you just fucking work", this.target, dataArray);
           this.target = dataArray.join(" ");
           console.log(this.target, dataArray);
-          //console.log(this.$);
           console.log(dataArray);
-          //console.log(this.dataArrayString);
           this.$.toaster.text = "Target set to: " + dataArray.join(", ") + ", switch to the equalizer page for further adjustment";
           this.$.toaster.show();
           console.log("_setTargetClicked");
@@ -311,7 +242,7 @@
           for(var i = 0; i < this.speaker.TargetNames.length; i++) {
             if(name.toLowerCase() == this.speaker.TargetNames[i].valueOf().toLowerCase()) {
               console.log("same name dude");
-              ifvar++;    // make more checks dummy
+              ifvar++;
             }
           }
         }
@@ -327,10 +258,7 @@
             "name": name,
             "update": false,
             "constants": dataArray.join(" ")
-            // Maybe we should add a currently applied thing in here or something
           };
-
-          //console.log(dataArray.join(" "));
 
           console.log("addTargetAjax:", addTargetAjax.body);
           this.$.addTargetAjax.generateRequest();
@@ -345,38 +273,26 @@
           temp = document.createElement("paper-item");
           temp.setAttribute("value", name);
           temp.setAttribute("id", name);
-          // temp.setAttribute("speakerId", controller.speaker.speakerId); try doing some optimization stuff with the speakerId
           temp.innerHTML = name;
           Polymer.dom(this.$.targetListbox).appendChild(temp);
 
           var length = this.speaker.Target.length;
-          //console.log(length);
 
           console.log("dataArray length", dataArray);
-
-         /* var dataArrayCopy = dataArray.slice();
-
-          console.log("dataArrayCopy: ", dataArrayCopy);*/
-          this.speaker.Target.push(dataArray.slice());    // change this to dataArrayCopy if it breaks
-          //}
+          this.speaker.Target.push(dataArray.slice());
 
           this.speaker.TargetNames[this.speaker.TargetNames.length] = name;
 
           console.log(this.speaker.Target);
 
           this.$.targetListbox.selected = name;
-          //this.$.toasty.text = "";
           this.$.popupInput.value = "";
         }
       },
 
       _cancelPressed: function(event) {
-        // make something that will capture the last thing clicked and keep track of that and change it to that when they click cancel
-
         this.$.targetListbox.selected = -1;
-
         console.log(lastSelected);
-
       },
 
       listeners: {
@@ -410,10 +326,9 @@
             var associationLink = -1;
             for (k in this.speaker.TargetNames) {
               if(selected == this.speaker.TargetNames[k].valueOf().toLowerCase()) {
-                // show a toast here with the preset applied message
-                associationLink = k;   // this will either need to be bounded by the the restriction that two names cannot be the same or we need to check
+                associationLink = k;
                 console.log("associationLink", associationLink);
-                break;    // this is for efficiency reasons, better to keep it this way if it works
+                break;
               }
             }
             if(associationLink != -1) {
@@ -423,7 +338,7 @@
                dataArray[j] = this.speaker.Target[associationLink][j]; 
               }
 
-              $(document.getElementsByClassName("inputs")).each(function(k) {   // this can be optimized
+              $(document.getElementsByClassName("inputs")).each(function(k) {
                 this.value = dataArray[k];
               });
 
@@ -520,7 +435,6 @@
           errorAdjustToast.show();
         }
       }
-      //console.log(dataArray);
     });
 
     var redrawData = {
