--- a/software/src/omaha/templates/components/zones/zone-controller.html
+++ b/software/src/omaha/templates/components/zones/zone-controller.html
@@ -45,7 +45,6 @@
       equalizer-controller-zone {
         width: 90%;
         min-width: 300px;
-        /*height: calc(60% + calc(.6 * 100vw));*/
         height: 100%;
       }
 
@@ -180,7 +179,7 @@
           value: 0
         },
 
-        volumeLevel: {    // this shit and all the other shitters were volumeone for some reason ??? changed to volumeLevel
+        volumeLevel: {
           type: String,
           value: "0",
           observer: '_volumeUpdate'
@@ -209,12 +208,6 @@
           observer: '_equalizerUpdate'
         },
 
-        /*target: {
-          type: String,
-          value: "0",
-          observer: '_targetUpdate'
-        },*/
-
         animationConfig: {
           value: function() {
             return {
@@ -223,7 +216,6 @@
                   node: this
                 },
               'exit': {
-                // provided by neon-animation-animations/fade-out-animation.html
                 name: 'slide-left-animation',
                 node: this
               }
@@ -234,26 +226,6 @@
 
       _speakerSelected: function() {
           console.log("this shit is working");
-      },
-
-      _volumeUpdate: function() {
-        /*
-        if(this.isReady) {
-          var self = this;
-          self.zone.speakers.forEach(function(speaker){
-            speaker.volumeLevel = self.volume;
-            var updatedAttributes = ["volume"];
-            var attributeValues = {
-              "volume": self.volume,
-            };
-            self.$.speakerUpdateAjax.body = {
-              "updatedAttributes": updatedAttributes, 
-              "attributeValues": attributeValues,
-              "speaker": speaker.id
-            };
-            self.$.speakerUpdateAjax.generateRequest();
-          });
-        }*/
       },
 
       _pagingUpdate: function() {
@@ -271,24 +243,6 @@
         }
         console.log("_pagingUpdate " + this.pagingLevel);
       },
-
-      /*
-      _musicVolumeUpdate: function() {
-        if(this.isReady) {
-          var updatedAttributes = ["musicVolume"];
-          var attributeValues = {
-            "musicVolume": this.musicVolumeLevel,
-          };
-          this.$.speakerUpdateAjax.body = {
-            "updatedAttributes": updatedAttributes, 
-            "attributeValues": attributeValues,
-            "speaker": this.speakerId
-          };
-          this.$.speakerUpdateAjax.generateRequest();
-        }
-        console.log("_musicVolumeLevel " + this.musicVolumeLevel);
-      },
-      */
 
       _equalizerUpdate: function() {
         if(this.isReady) {
@@ -375,7 +329,6 @@
 
       ready: function() {
         console.log(document.getElementById('target'));
-        //if(this.speaker !== undefined)
           this._initializeStatus(this.speaker);
         this.isReady = true;
         console.log("this is the zone flag", zoneFlag);
