--- a/software/src/omaha/templates/components/zones/zone-map-controller.html
+++ b/software/src/omaha/templates/components/zones/zone-map-controller.html
@@ -31,7 +31,7 @@
       paper-card {
         padding: 10px;
         width: 100%;
-        height: 100%;   /* This was 100%, cahnge back if needed */
+        height: 100%;
         text-align: center;
       }
 
@@ -76,8 +76,6 @@
 
     </style>
 
-    <!-- right here just make two maps with the zones each rendered like the listboxes -->
-
     <div id="zoneContainer"        style="width: 75%; height: 100%; float: left; visibility: visible;"></div>
     <div id="pagingZoneContainer"  style="position: absolute; width: 75%; height: 100%; visibility: hidden;"></div>
 
@@ -100,38 +98,17 @@
           <div class="layout vertical">
             <paper-dropdown-menu id="zonePickerMenu" no-label-float label="Zone Type:" style="margin-top: 0%; margin-left: 8%;">
             <paper-listbox id="zonePickerListbox" attr-for-selected="value" selected="{{selection}}" class="dropdown-content" value="0">
-              <!--<template if="{{this.speaker.Response}}">
-                <paper-dropdown-menu selected="{{selected}}">
-                  <template repeat="{{label in this.speaker.PresetNames}}">
-                    <paper-item value="{{i}}" label="{{label}}"></paper-item>
-                  </template>
-                </paper-dropdown-menu>  
-              </template>-->
                 <paper-item id="masking_zone" onclick="showMasking()" value="Masking Zone">Masking Zone</paper-item>
                 <paper-item id="paging_zone"  onclick="showPaging()" value="Paging Zone">Paging Zone</paper-item>   
             </paper-listbox>
           </paper-dropdown-menu>
             <paper-dropdown-menu id="zoneMenu" no-label-float label="Zone:" style="visibility: hidden; margin-top: 0%; margin-left: 8%;">
             <paper-listbox id="zoneListbox" attr-for-selected="value" selected="{{selection}}" class="dropdown-content" value="0">
-              <!--<template if="{{this.speaker.Response}}">
-                <paper-dropdown-menu selected="{{selected}}">
-                  <template repeat="{{label in this.speaker.PresetNames}}">
-                    <paper-item value="{{i}}" label="{{label}}"></paper-item>
-                  </template>
-                </paper-dropdown-menu>  
-              </template>-->
             </paper-listbox>
           </paper-dropdown-menu>
 
           <paper-dropdown-menu id="pagingZoneMenu" no-label-float label="Paging Zone:" style="visibility: hidden; position: absolute; margin-top: 0%; margin-left: 4%; top: 52%; width: 190px;">
           <paper-listbox id="pagingZoneListbox" attr-for-selected="value" selected="{{selection}}" class="dropdown-content" value="0">
-            <!--<template if="{{this.speaker.Response}}">
-              <paper-dropdown-menu selected="{{selected}}">
-                <template repeat="{{label in this.speaker.PresetNames}}">
-                  <paper-item value="{{i}}" label="{{label}}"></paper-item>
-                </template>
-              </paper-dropdown-menu>  
-            </template>-->
           </paper-listbox>
         </paper-dropdown-menu>
 
@@ -170,8 +147,6 @@
       debounce-duration="300">
     </iron-ajax>
 
-
-    <!-- <help-panel></help-panel> -->
   </template>
 
   <script>
@@ -183,14 +158,12 @@
   var info = [];
   var totalInfo = [];
 
-  // escape listener
   document.onkeydown = function(evt) {
     evt = evt || window.event;
     if (evt.keyCode == 27) {
       alert("You are about to clear you selection.\nAre you sure you want to do this?");
       document.getElementById("speakerHolder").innerHTML = "";
       selectedFeatures.clear();
-      //selectedFeatures.a = [];     // this needs some work
       info = [];
       totalInfo = [];
     }
@@ -218,9 +191,6 @@
 
   }
 
-
-  // the name needs to be limited to 50 characters
-
     Polymer({
       is: 'zone-map-controller',
 
@@ -237,7 +207,6 @@
                   node: this
                 },
               'exit': {
-                // provided by neon-animation-animations/fade-out-animation.html
                 name: 'slide-left-animation',
                 node: this
               }
@@ -252,13 +221,9 @@
         console.log("_acceptPressed", totalInfo);
         var name = this.$.popupInput.value.valueOf().replace("\n", "").replace("\t", "");
 
-        // this is where we strip out the undefineds
-
         this.$.createZoneAjax.body = {
-          // make sure that this isn't empty, do the disable button thing
-          // send the name with this too dummy
           "name":     name,
-          "speakers": totalInfo   // stripem out, maybe we can just takem out when we show them in list
+          "speakers": totalInfo
         }
 
         totalInfo = [];
@@ -294,7 +259,7 @@
         var mapController = this;
         mapController.featureMap = {};
         var container = mapController.$.popup;
-        var overlay = new ol.Overlay(/** @type {olx.OverlayOptions} */ ({
+        var overlay = new ol.Overlay(({
           element: container,
           autoPan: true,
           autoPanAnimation: {
@@ -303,10 +268,6 @@
         }));
       
         mapController.overlay = overlay;
-        
-        // Map views always need a projection.  Here we just want to map image
-        // coordinates directly to map coordinates, so we create a projection that uses
-        // the image 4 in pixels.
         var extent = [0, 0, 2200, 1700];
         var projection = new ol.proj.Projection({
           code: 'pixel',
@@ -332,40 +293,10 @@
         var style = {}
 
        var allColors = [
-          /*'#795548',
-          '#ff5722',
-          '#ff9800',
-          '#ffc107',
-          //'--paper-yellow-500', this is kinda hard to see
-          '#cddc39',
-          '#8bc34a',
-          '#009688',
-          '#00bcd4',
-          '#03a9f4',
-          '#2196f3',
-          '#3f51b5',
-          '#673ab7',
-          '#9c27b0',
-          '#e91e63',*/
           '#f44336'
         ];
         
         var unusedColors = [
-          '#795548',
-          '#ff5722',
-          '#ff9800',
-          '#ffc107',
-          //'--paper-yellow-500', this is kinda hard to see
-          '#cddc39',
-          '#8bc34a',
-          '#009688',
-          '#00bcd4',
-          '#03a9f4',
-          '#2196f3',
-          '#3f51b5',
-          '#673ab7',
-          '#9c27b0',
-          '#e91e63',
           '#f44336'
         ];
         var colorMap = {};
@@ -427,10 +358,6 @@
         });
         
         mapController.map = map;
-
-        // this is the selection handler for the box dragging
-
-        // we need to add a button if it is a touch screen
         var box = new ol.interaction.Select();
         map.addInteraction(box);
 
@@ -438,7 +365,6 @@
 
         console.log("selectedFeatures: ", selectedFeatures);
 
-        // a DragBox interaction used to select features by drawing boxes
         var dragBox = new ol.interaction.DragBox({
           condition: ol.events.condition.shiftKeyOnly,
           style: new ol.style.Style({
@@ -450,24 +376,9 @@
 
         var source = new ol.source.Vector();
 
-        /*var dragBox = new ol.interaction.Draw({
-          features: selectedFeatures,
-          source: source,
-          type: "Polygon",
-          style: new ol.style.Style({
-            stroke: new ol.style.Stroke({
-              color: [63, 81, 181, 1]
-            })
-          }) 
-
-        });*/
-
         map.addInteraction(dragBox);
 
         dragBox.on('boxend', function(e) {
-          // features that intersect the box are added to the collection of
-          // selected features, and their names are displayed in the "info"
-          // div
           var extent = dragBox.getGeometry().getExtent();
 
           console.log(extent);
@@ -477,7 +388,6 @@
 
           console.log(typeof selectedFeatures.a);
 
-          //for (var i = 0; i < selectedFeatures.a.length; i++) {
               var areYouInThere = selectedFeatures.a.indexOf(feature);
               console.log(areYouInThere);
               if(areYouInThere == -1) {
@@ -486,90 +396,26 @@
                 console.log(totalInfo);
               } else {
                 console.log("Speaker", feature.B.speaker.id, "is already in the list of selected speakers.");
-                //delete totalInfo[areYouInThere];    // make something for delete
                 console.log(selectedFeatures);
-
-                
-                /*console.log(selectedFeatures.a.length);
-
-                for (var j = 0; j < selectedFeatures.a.length; j++) {
-                  //console.log("THIS IS WHAT YOU ARE LOOKING FOR", feature.B.speaker.id,  selectedFeatures.a[j].B.speaker.id);
-                  if(info[i] === selectedFeatures.a[j].B.speaker.id) {
-                    selectedFeatures.remove(j);
-                    console.log("hi", j);
-                  }
-                }
-                     console.log(selectedFeatures.a.length);
-
-                             solve this shit later
-
-                */
-
                 console.log(totalInfo);
               }
-           // }
-
-            // just make it grab every other one
             info.push(feature.B.speaker.id);
           });
           console.log("selectedFeatures: ", selectedFeatures);
 
-          // To make sure that we are no running this on times when nothing is selected
           if (info.length > 0) {
-             //infoBox.innerHTML = info.join(', ');
             console.log("Selected speakers: ", info);
 
-            // i have a feeling that this is not very optimized
-
-            // Here we figure out what is not already in the total selected and add the ones that aren't and delete it if they are
-            /*for (var i = 0; i < info.length; i++) {
-              var areYouInThere = totalInfo.indexOf(info[i]);
-              if(areYouInThere == -1) {
-                totalInfo.push(info[i]); 
-                console.log(totalInfo);
-              } else {
-                console.log("Speaker", info[i], "is already in the list of selected speakers.");
-                delete totalInfo[areYouInThere];    // make something for delete
-                console.log(selectedFeatures);
-
-                
-                /*console.log(selectedFeatures.a.length);
-
-                for (var j = 0; j < selectedFeatures.a.length; j++) {
-                  //console.log("THIS IS WHAT YOU ARE LOOKING FOR", feature.B.speaker.id,  selectedFeatures.a[j].B.speaker.id);
-                  if(info[i] === selectedFeatures.a[j].B.speaker.id) {
-                    selectedFeatures.remove(j);
-                    console.log("hi", j);
-                  }
-                }
-                     console.log(selectedFeatures.a.length);
-
-                             solve this shit later
-
-                
-
-                console.log(totalInfo);
-              }
-            }*/
-
             console.log("Total selected speakers: ", totalInfo);
-            // make this a checkbox thing that will fire when checked, which means we need to keep track of two arrays?
-            
             console.log("Starting sort: ");
-            // Sort the array so that when we display it, the items are sorted
-            totalInfo = mergeSort(totalInfo);   // This mergeSort isn't any faster wtf
+            totalInfo = mergeSort(totalInfo);
 
-            // Clear the speaker holder element and then reset the entities to everything that has been selected, updating the view if you will
             speakerHolder = document.getElementById("speakerHolder");
             var innerHTML = "";
             speakerHolder.innerHTML = "";
             for (var k = 0; k < totalInfo.length; k++) {
-              // The selections in the total selection array take a value of 'undefined' when deleted, and we don't want those in our view, so we parse them out
               if (totalInfo[k] !== undefined) {
                innerHTML += "<paper-item center-justified flex style=\"background: rgba(63, 81, 181, .1);  border-style: solid; border-radius: 0px; border-width: 1px; border-color: #3f51b5; margin: 5px;\"><font style=\"width: 100%; text-align: center;\"> Speaker " + totalInfo[k] + "</font></paper-item>";
-                //Polymer.dom(speakerHolder).innerHTML = Polymer.dom(speakerHolder).innerHTML + "<paper-item center-justified flex style=\"border-style: solid; border-radius: 5px; border-width: 1px; border-color: #3f51b5; margin: 5px;\"> Speaker " + totalInfo[k] + "</paper-item>";/* + document.getElementById("speakerHolder").innerHTML + "<paper-item> Speaker " + totalInfo[k] + "</paper-item>" +document.getElementById("speakerHolder").innerHTML + "<paper-item> Speaker " + totalInfo[k] + "</paper-item>" +document.getElementById("speakerHolder").innerHTML + "<paper-item> Speaker " + totalInfo[k] + "</paper-item>" +document.getElementById("speakerHolder").innerHTML + "<paper-item> Speaker " + totalInfo[k] + "</paper-item>" +document.getElementById("speakerHolder").innerHTML + "<paper-item> Speaker " + totalInfo[k] + "</paper-item>" +document.getElementById("speakerHolder").innerHTML + "<paper-item> Speaker " + totalInfo[k] + "</paper-item>" +document.getElementById("speakerHolder").innerHTML + "<paper-item> Speaker " + totalInfo[k] + "</paper-item>" +document.getElementById("speakerHolder").innerHTML + "<paper-item> Speaker " + totalInfo[k];*/
-
-                // when we send it off make a new array and splice out the undefineds 
               }
             }
             speakerHolder.innerHTML = innerHTML;
@@ -577,44 +423,14 @@
           }
         });
 
-        // clear selection when drawing a new box and when clicking on the map
         dragBox.on('boxstart', function(e) {
 
-          // make something that removes them from the animation here when you feel like it
-
-          //selectedFeatures.clear();
-          //infoBox.innerHTML = '&nbsp;';
         });
         map.on('click', function() {
 
         console.log(selectedFeatures);
         selectedFeatures.clear();
-          //infoBox.innerHTML = '&nbsp;';
         });
-
-        // this is the selection for the tooltip shit
-
-       /* var select = new ol.interaction.Select({
-          style: function(feature, resolution) {
-                var zone = feature.getProperties().speaker.zone.name;
-                return style[zone].style;
-            }
-        });
-        map.addInteraction(select);
-        select.on('select', function(e) {
-            if(e.selected.length > 0) {
-              var speaker = e.selected[0].getProperties().speaker
-
-              mapController.selected = speaker;
-              // get the point's coordinate
-              var coordinate = e.selected[0].getProperties().geometry.getCoordinates();
-              overlay.setPosition(coordinate);
-            } else {
-              // make sure the overlay is hidden
-              mapController._hideOverlay();
-            }
-            
-        }); */
       },
 
       renderPagingMap: function() {
@@ -622,7 +438,7 @@
         var mapController = this;
         mapController.featureMap = {};
         var container = mapController.$.popup;
-        var overlay = new ol.Overlay(/** @type {olx.OverlayOptions} */ ({
+        var overlay = new ol.Overlay(({
           element: container,
           autoPan: true,
           autoPanAnimation: {
@@ -631,10 +447,6 @@
         }));
       
         mapController.overlay = overlay;
-        
-        // Map views always need a projection.  Here we just want to map image
-        // coordinates directly to map coordinates, so we create a projection that uses
-        // the image 4 in pixels.
         var extent = [0, 0, 2200, 1700];
         var projection = new ol.proj.Projection({
           code: 'pixel',
@@ -660,40 +472,10 @@
         var style = {}
 
        var allColors = [
-          /*'#795548',
-          '#ff5722',
-          '#ff9800',
-          '#ffc107',
-          //'--paper-yellow-500', this is kinda hard to see
-          '#cddc39',
-          '#8bc34a',
-          '#009688',
-          '#00bcd4',
-          '#03a9f4',
-          '#2196f3',
-          '#3f51b5',
-          '#673ab7',
-          '#9c27b0',
-          '#e91e63',*/
           '#f44336'
         ];
         
         var unusedColors = [
-          '#795548',
-          '#ff5722',
-          '#ff9800',
-          '#ffc107',
-          //'--paper-yellow-500', this is kinda hard to see
-          '#cddc39',
-          '#8bc34a',
-          '#009688',
-          '#00bcd4',
-          '#03a9f4',
-          '#2196f3',
-          '#3f51b5',
-          '#673ab7',
-          '#9c27b0',
-          '#e91e63',
           '#f44336'
         ];
         var colorMap = {};
@@ -754,10 +536,6 @@
         });
         
         mapController.map = map;
-
-        // this is the selection handler for the box dragging
-
-        // we need to add a button if it is a touch screen
         var box = new ol.interaction.Select();
         map.addInteraction(box);
 
@@ -802,23 +580,18 @@
           });
           console.log("selectedFeatures: ", selectedFeatures);
 
-          // To make sure that we are no running this on times when nothing is selected
           if (info.length > 0) {
             console.log("Selected speakers: ", info);
 
             console.log("Total selected speakers: ", totalInfo);
-            // make this a checkbox thing that will fire when checked, which means we need to keep track of two arrays?
             
             console.log("Starting sort: ");
-            // Sort the array so that when we display it, the items are sorted
-            totalInfo = mergeSort(totalInfo);   // This mergeSort isn't any faster wtf
+            totalInfo = mergeSort(totalInfo);
 
-            // Clear the speaker holder element and then reset the entities to everything that has been selected, updating the view if you will
             speakerHolder = document.getElementById("speakerHolder");
             var innerHTML = "";
             speakerHolder.innerHTML = "";
             for (var k = 0; k < totalInfo.length; k++) {
-              // The selections in the total selection array take a value of 'undefined' when deleted, and we don't want those in our view, so we parse them out
               if (totalInfo[k] !== undefined) {
                innerHTML += "<paper-item center-justified flex style=\"background: rgba(63, 81, 181, .1);  border-style: solid; border-radius: 0px; border-width: 1px; border-color: #3f51b5; margin: 5px;\"><font style=\"width: 100%; text-align: center;\"> Speaker " + totalInfo[k] + "</font></paper-item>";
               }
@@ -827,14 +600,8 @@
             console.log(totalInfo);
           }
         });
-
-        // clear selection when drawing a new box and when clicking on the map
         dragBox.on('boxstart', function(e) {
-
-          // make something that removes them from the animation here when you feel like it
-
-          //selectedFeatures.clear();
-          //infoBox.innerHTML = '&nbsp;';
+          // why is there nothing here??
         });
         map.on('click', function() {
 
